3/css/_global/_library.scss
// RESPONSIVE GRID
.responsive-grid {
  display: flex;
  flex-direction: row;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0 $spacing-lg;
  opacity: 0;
  @include transition(opacity, 0.25s, ease);
  .responsive-column {
    display: grid;
    width: calc((100% / 4) - #{$spacing-md});
    height: 100%;
    margin: 0 $spacing-md;
    padding: 0;
    background-color: #ff10ff;
    &:first-of-type {
      margin-left: 0;
    }
    &:nth-of-type(4) {
      margin-right: 0;
    }
    &:nth-of-type(5),
    &:nth-of-type(6),
    &:nth-of-type(7),
    &:nth-of-type(8),
    &:nth-of-type(9),
    &:nth-of-type(10),
    &:nth-of-type(11),
    &:nth-of-type(12) {
      display: none;
    }
  }
  &.show-grid {
    opacity: 0.1;
  }
}

@media (min-width: 48rem) {
  .responsive-grid {
    padding: 0 $spacing-xl;
    .responsive-column {
      width: calc((100% / 12) - #{$spacing-lg});
      margin: 0 $spacing-lg;
      &:nth-of-type(4) {
        margin-right: $spacing-lg;
      }
      &:nth-of-type(12) {
        margin-right: 0;
      }
      &:nth-of-type(5),
      &:nth-of-type(6),
      &:nth-of-type(7),
      &:nth-of-type(8),
      &:nth-of-type(9),
      &:nth-of-type(10),
      &:nth-of-type(11),
      &:nth-of-type(12) {
        display: grid;
      }
    }
  }
}


// USE THESE TO GO FROM 4-COL TO 8-COL TO 12-COL
/*
@media (min-width: 48rem) {
  .responsive-grid {
    padding: 0 $spacing-xl;
    .responsive-column {
      width: calc((100% / 8) - #{$spacing-lg});
      margin: 0 $spacing-lg;
      &:nth-of-type(4) {
        margin-right: $spacing-lg;
      }
      &:nth-of-type(8) {
        margin-right: 0;
      }
    }
    .responsive-column:nth-of-type(5),
    .responsive-column:nth-of-type(6),
    .responsive-column:nth-of-type(7),
    .responsive-column:nth-of-type(8) {
      display: grid;
    }
  }
}

@media (min-width: 80rem) {
  .responsive-grid {
    .responsive-column {
      width: calc((100% / 12) - #{$spacing-lg});
      &:nth-of-type(8) {
        margin-right: $spacing-lg;
      }
      &:nth-of-type(12) {
        margin-right: 0;
      }
    }
  .responsive-column:nth-of-type(9),
  .responsive-column:nth-of-type(10),
  .responsive-column:nth-of-type(11),
  .responsive-column:nth-of-type(12) {
      display: grid;
    }
  }
}
*/

